login displays message for users

--- a/_posts/2024-10-31-login.md
+++ b/_posts/2024-10-31-login.md
@@ -8,14 +8,13 @@ title: Login
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page - Finotic</title>
+    <title>NITD FINANCE Login Page</title>
     <style>
         * {
             box-sizing: border-box;
             margin: 0;
             padding: 0;
         }
-
         body {
             font-family: Arial, sans-serif;
             background-color: #f3f4f6;
@@ -25,7 +24,6 @@ title: Login
             height: 100vh;
             color: #333;
         }
-
         .container {
             display: flex;
             background: #ffffff;
@@ -35,7 +33,6 @@ title: Login
             max-width: 1000px;
             width: 100%;
         }
-
         .left-section, .right-section {
             padding: 2rem;
             display: flex;
@@ -44,23 +41,18 @@ title: Login
             align-items: center;
             width: 50%;
         }
-
         .left-section {
             background: #f8fafc;
             text-align: center;
         }
-
         .right-section {
             text-align: left;
         }
-
         .left-section h2 {
             font-size: 1.5rem;
             margin-bottom: 1rem;
             color: #1f2937;
         }
-
-        /* Stock graph style for left section */
         .stock-graph {
             background: url('https://via.placeholder.com/300x200') no-repeat center center;
             background-size: cover;
@@ -76,24 +68,20 @@ title: Login
             font-weight: bold;
             font-size: 1.2rem;
         }
-
         .right-section h2 {
             font-size: 1.8rem;
             margin-bottom: 1rem;
         }
-
         .right-section p {
             font-size: 1rem;
             color: #6b7280;
             margin-bottom: 1.5rem;
         }
-
         .input-group {
             margin-bottom: 1rem;
             position: relative;
             width: 100%;
         }
-
         .input-group input {
             width: 100%;
             padding: 0.8rem;
@@ -102,7 +90,6 @@ title: Login
             font-size: 1rem;
             color: #6b7280;
         }
-
         .input-group .icon {
             position: absolute;
             right: 1rem;
@@ -112,7 +99,6 @@ title: Login
             font-size: 1.2rem;
             cursor: pointer;
         }
-
         .login-button {
             width: 100%;
             background-color: #3b82f6;
@@ -124,7 +110,6 @@ title: Login
             cursor: pointer;
             margin-top: 0.5rem;
         }
-
         .forgot-password {
             font-size: 0.9rem;
             color: #3b82f6;
@@ -132,19 +117,16 @@ title: Login
             display: block;
             margin-top: 0.5rem;
         }
-
         .signup-link {
             margin-top: 1.5rem;
             font-size: 0.9rem;
             color: #6b7280;
             text-align: center;
         }
-
         .signup-link a {
             color: #3b82f6;
             text-decoration: none;
         }
-
         .footer {
             text-align: center;
             font-size: 0.8rem;
@@ -162,34 +144,49 @@ title: Login
                 Today's Market Trends
             </div>
         </div>
-
         <!-- Right Section -->
         <div class="right-section">
             <h2>Welcome back!</h2>
             <p>Start managing your finances faster and better</p>
-            
-            <form>
+            <form id="loginForm">
                 <div class="input-group">
-                    <input type="email" placeholder="you@example.com" required>
-                    <span class="icon">📧</span>
+                    <input type="email" id="username" placeholder="Username" required>
                 </div>
-                
                 <div class="input-group">
-                    <input type="password" placeholder="At least 8 characters" required>
-                    <span class="icon">🔒</span>
+                    <input type="password" id="password" placeholder="Password" required>
                 </div>
-
                 <a href="#" class="forgot-password">Forgot password?</a>
-
-                <button type="submit" class="login-button">Login</button>
+                <button type="button" onclick="loginUser()" class="login-button">Login</button>
             </form>
-
-            <div class="signup-link">
-                Don't have an account? <a href="#">Sign Up</a>
-            </div>
-
-            <div class="footer">© 2022 ALL RIGHTS RESERVED</div>
+            <div id="loginMessage" class="signup-link"></div>
+            <div class="footer">© 2024 ALL RIGHTS RESERVED - NITD FINANCE</div>
         </div>
     </div>
+    <script>
+    async function loginUser() {
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
+        const loginMessage = document.getElementById('loginMessage');
+        try {
+            const response = await fetch('http://localhost:8085/user/login', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ username, password })
+            });
+            let result;
+            if (response.headers.get('content-type')?.includes('application/json')) {
+                result = await response.json();
+            } else {
+                result = { success: response.ok, message: await response.text() };
+            }
+            loginMessage.style.color = result.success ? 'green' : 'red';
+            loginMessage.textContent = result.message || 'Login failed';
+        } catch (error) {
+            loginMessage.style.color = 'red';
+            loginMessage.textContent = 'An error occurred. Please try again.';
+            console.error('Login Error:', error);
+        }
+    }
+    </script>
 </body>
 </html>
