login redirects to home on localhost

--- a/_posts/2024-10-31-login.md
+++ b/_posts/2024-10-31-login.md
@@ -179,8 +179,15 @@ title: Login
             } else {
                 result = { success: response.ok, message: await response.text() };
             }
-            loginMessage.style.color = result.success ? 'green' : 'red';
-            loginMessage.textContent = result.message || 'Login failed';
+            // Redirect to the desired page after a successful login
+            if (result.success) {
+                loginMessage.style.color = 'green';
+                loginMessage.textContent = 'Login successful!';
+                window.location.href = 'http://127.0.0.1:4100/student_2025/stocks/home';
+            } else {
+                loginMessage.style.color = 'red';
+                loginMessage.textContent = result.message || 'Login failed';
+            }
         } catch (error) {
             loginMessage.style.color = 'red';
             loginMessage.textContent = 'An error occurred. Please try again.';
