--- a/_posts/2024-10-31-login.md
+++ b/_posts/2024-10-31-login.md
@@ -30,8 +30,10 @@ title: Login
             border-radius: 8px;
             overflow: hidden;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            max-width: 1000px;
+            max-width: 75%;
+            max-height: 90%;
             width: 100%;
+            height: 80vh;
         }
         .left-section, .right-section {
             padding: 2rem;
@@ -40,10 +42,11 @@ title: Login
             justify-content: center;
             align-items: center;
             width: 50%;
+            height: 100%;
         }
         .left-section {
-            background: #f8fafc;
-            text-align: center;
+            background: #f8fafc url('https://via.placeholder.com/300x200') no-repeat center center;
+            background-size: cover;
         }
         .right-section {
             text-align: left;
@@ -69,11 +72,11 @@ title: Login
             font-size: 1.2rem;
         }
         .right-section h2 {
-            font-size: 1.8rem;
+            font-size: 2rem; /* Increased font size */
             margin-bottom: 1rem;
         }
         .right-section p {
-            font-size: 1rem;
+            font-size: 1.1rem; /* Increased font size */
             color: #6b7280;
             margin-bottom: 1.5rem;
         }
@@ -89,6 +92,7 @@ title: Login
             border-radius: 8px;
             font-size: 1rem;
             color: #6b7280;
+            min-width: 300px; /* Ensure a minimum width for inputs */
         }
         .input-group .icon {
             position: absolute;
