left pane of login styling

--- a/_posts/2024-10-31-login.md
+++ b/_posts/2024-10-31-login.md
@@ -45,20 +45,17 @@ title: Login
             height: 100%;
         }
         .left-section {
-            background: #f8fafc url('https://via.placeholder.com/300x200') no-repeat center center;
-            background-size: cover;
-        }
-        .right-section {
-            text-align: left;
+            background: #e2e8f0; /* Soft gray background for a clean look */
+            text-align: center;
         }
         .left-section h2 {
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             margin-bottom: 1rem;
             color: #1f2937;
+            font-weight: bold;
         }
         .stock-graph {
-            background: url('https://via.placeholder.com/300x200') no-repeat center center;
-            background-size: cover;
+            background: #cbd5e1; /* Lighter gray box for contrast */
             border-radius: 8px;
             width: 80%;
             height: 200px;
@@ -145,7 +142,6 @@ title: Login
         <div class="left-section">
             <h2>Market Overview</h2>
             <div class="stock-graph">
-                Today's Market Trends
             </div>
         </div>
         <!-- Right Section -->
