--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -463,6 +463,7 @@ async function buyStock() {
     const outputElement = document.getElementById("output");
     outputElement.textContent = ""; // Clear previous messages
     console.log(stockSymbol);
+    //await delay(1000);
     try {
         const response = await fetch('http://localhost:8085/user/addStock', {
             method: 'POST',
@@ -490,13 +491,20 @@ async function buyStock() {
             // Display the updated quantity of the bought stock
             userElement.textContent = `${stockSymbol} current quantity: ${updatedQuantity}`;
             console.log(`Successfully added 1 share of ${stockSymbol} to the portfolio.`);
+            //await delay(1000);
         } else {
-            outputElement.textContent = `Failed to add ${stockSymbol}. Please try again.`;
+            changeElement.textContent = `Failed to add ${stockSymbol}. Please try again.`;
+            changeElement.classList.add("negative");
+            changeElement.classList.remove("positive");
+            //userElement.textContent = `${stockSymbol} current quantity: ${updatedQuantity}`;
             console.error(`Failed to add ${stockSymbol}. Status code:`, response.status);
         }
     } catch (error) {
         console.error('Error adding stock:', error);
-        outputElement.textContent = "Error adding stock. Please try again later.";
+        changeElement.textContent = "Error adding stock. Please try again later.";
+        changeElement.classList.add("negative");
+        changeElement.classList.remove("positive");
+        //userElement.textContent = `${stockSymbol} current quantity: ${updatedQuantity}`;
     }
 }
 async function removeStock() {
@@ -504,6 +512,7 @@ async function removeStock() {
     const outputElement = document.getElementById("output");
     outputElement.textContent = ""; // Clear previous messages
     console.log(stockSymbol);
+    //await delay(1000);
     try {
         const response = await fetch('http://localhost:8085/user/removeStock', {
             method: 'POST',
@@ -530,6 +539,7 @@ async function removeStock() {
             // Display the updated user stocks with quantities
             userElement.textContent = `${stockSymbol} remaining quantity: ${remainingQuantity}`;
             console.log(`Successfully removed 1 share of ${stockSymbol} from the portfolio.`);
+            //await delay(1000);
         } else {
             outputElement.textContent = `Failed to remove ${stockSymbol}. Please try again.`;
             console.error(`Failed to remove ${stockSymbol}. Status code:`, response.status);
@@ -549,3 +559,6 @@ async function getUserStock(user) {
                 return [];
             }
         }
+function delay(ms) {
+    return new Promise(resolve => setTimeout(resolve, ms));
+}
