fixed stock stacking/duplicating

--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -3,6 +3,7 @@ layout: none
 permalink: /stocks/buysell
 title: Stocks Buy/Sell
 ---
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -258,9 +259,31 @@ title: Stocks Buy/Sell
         </div>
         <div class="buy-sell-buttons-container">
             <div class="buy-sell-buttons">
-                <button class="buy-button" onclick="buyStock()">Buy</button>
-                <button class="sell-button" onclick="removeStock()">Sell</button>
-            </div>
+                <button class="buy-button" onclick="handleBuyClick()">Buy</button>
+                <button class="sell-button" onclick="handleSellClick()">Sell</button>
+                <script>
+                    let buyCooldown = false;
+                    let sellCooldown = false;
+                    function handleBuyClick() {
+                        if (!buyCooldown) {
+                            buyStock();
+                            buyCooldown = true;
+                            setTimeout(() => {
+                                buyCooldown = false;
+                            }, 1000); // 1 second cooldown
+                        }
+                    }
+                    function handleSellClick() {
+                        if (!sellCooldown) {
+                            removeStock();
+                            sellCooldown = true;
+                            setTimeout(() => {
+                                sellCooldown = false;
+                            }, 1000); // 1 second cooldown
+                        }
+                    }
+                </script>    
+                </div>
             <p class="buysell" id="buysell"></p>
             <p class="userStock" id="userStock"></p>
         </div>
