user id mf works kys

--- a/_posts/2024-10-31-login.md
+++ b/_posts/2024-10-31-login.md
@@ -3,7 +3,6 @@ layout: none
 permalink: /stocks/login
 title: Login
 ---
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -163,6 +162,11 @@ title: Login
         </div>
     </div>
     <script>
+    var variable = "hello world!";
+    localStorage.setItem('name', variable)
+    console.log(variable);
+    let userID = null;
+    console.log(userID);
     async function loginUser() {
         const username = document.getElementById('username').value;
         const password = document.getElementById('password').value;
@@ -183,6 +187,11 @@ title: Login
             if (result.success) {
                 loginMessage.style.color = 'green';
                 loginMessage.textContent = 'Login successful!';
+                userID = username;
+                console.log(userID);
+                localStorage.setItem('userID', userID)
+                //console.log(variable);
+                //globalThis.myProperty = "hello world";
                 window.location.href = 'http://127.0.0.1:4100/student_2025/stocks/home';
             } else {
                 loginMessage.style.color = 'red';
