user id works in all files

--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -326,6 +326,8 @@ title: Stocks Buy/Sell
     <div id="output" style="color: red; padding-top: 10px;"></div>
     <script>
      let stockChart;
+    var userID = localStorage.getItem('userID')
+    console.log(userID);
     async function getStockData() {
         const stockSymbol = document.getElementById("searchBar").value;
         document.getElementById("output").textContent = ""; // Clear previous messages
@@ -494,7 +496,7 @@ async function buyStock() {
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-                username: "testUser4",
+                username: userID,
                 quantity: "1",
                 stockSymbol: stockSymbol
             })
@@ -502,7 +504,7 @@ async function buyStock() {
         const changeElement = document.getElementById('buysell');
         const userElement = document.getElementById('userStock');
         // Fetch updated user stock list after buying the stock
-        const userStocks = await getUserStock("testUser4");
+        const userStocks = await getUserStock(userID);
         if (response.ok) {
             // Find the stock in userStocks and get its updated quantity
             const stock = userStocks.find(s => s.stockSymbol === stockSymbol);
@@ -543,14 +545,14 @@ async function removeStock() {
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-                username: "testUser4",
+                username: userID,
                 quantity: "1",
                 stockSymbol: stockSymbol
             })
         });
         const changeElement = document.getElementById('buysell');
         const userElement = document.getElementById('userStock');
-        const userStocks = await getUserStock("testUser4");
+        const userStocks = await getUserStock(userID);
         if (response.ok) {
             // Find the stock in userStocks and get its remaining quantity
             const stock = userStocks.find(s => s.stockSymbol === stockSymbol);
