--- a/_posts/2024-10-31-login.md
+++ b/_posts/2024-10-31-login.md
@@ -141,11 +141,12 @@ title: Login
         <div class="left-section">
             <h2>Market Overview</h2>
             <div class="stock-graph">
+                <img src="{{ site.baseurl }}/images/stock_image.png" alt="Market Overview Image" style="width:100%; height:auto;">
             </div>
         </div>
         <!-- Right Section -->
         <div class="right-section">
-            <h2>Welcome back!</h2>
+            <h2>Welcome back to NITD Finance!</h2>
             <p>Start managing your finances faster and better</p>
             <form id="loginForm">
                 <div class="input-group">
