--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -240,7 +240,7 @@ title: Stocks Buy/Sell
             <a href="{{site.baseurl}}/stocks/viewer">Stocks</a>
             <a href="{{site.baseurl}}/stocks/portfolio">Portfolio</a>
             <a href="{{site.baseurl}}/stocks/buysell">Buy/Sell</a>
-            <a href="#">Profile</a>
+            <a href="{{site.baseurl}}/stocks/login">Logout</a>
         </div>
     </nav>
     <div class="search-container">
