removed graph and changed color

--- a/_posts/2024-10-31-login.md
+++ b/_posts/2024-10-31-login.md
@@ -44,28 +44,28 @@ title: Login
             height: 100%;
         }
         .left-section {
-            background: #e2e8f0; /* Soft gray background for a clean look */
+            background: linear-gradient(135deg, #1f2937, #3b82f6); /* Dark gradient background */
+            color: #ffffff; /* White text for contrast */
+            padding: 3rem;
             text-align: center;
         }
         .left-section h2 {
-            font-size: 1.8rem;
-            margin-bottom: 1rem;
-            color: #1f2937;
-            font-weight: bold;
+            font-size: 2.2rem; /* Larger font size for emphasis */
+            margin-bottom: 1.5rem;
         }
         .stock-graph {
-            background: #cbd5e1; /* Lighter gray box for contrast */
-            border-radius: 8px;
+            background: rgba(255, 255, 255, 0.2); /* Transparent white overlay */
+            border-radius: 12px;
             width: 80%;
             height: 200px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
-            margin-top: 1rem;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.05);
             display: flex;
             align-items: flex-end;
             justify-content: center;
-            color: #3b82f6;
+            color: #ffffff;
             font-weight: bold;
-            font-size: 1.2rem;
+            font-size: 1.4rem;
+            padding: 1rem;
         }
         .right-section h2 {
             font-size: 2rem; /* Increased font size */
@@ -141,7 +141,7 @@ title: Login
         <div class="left-section">
             <h2>Market Overview</h2>
             <div class="stock-graph">
-                <img src="{{ site.baseurl }}/images/stock_image.png" alt="Market Overview Image" style="width:100%; height:auto;">
+                Stock Graph
             </div>
         </div>
         <!-- Right Section -->
@@ -191,8 +191,6 @@ title: Login
                 userID = username;
                 console.log(userID);
                 localStorage.setItem('userID', userID)
-                //console.log(variable);
-                //globalThis.myProperty = "hello world";
                 window.location.href = 'http://127.0.0.1:4100/student_2025/stocks/home';
             } else {
                 loginMessage.style.color = 'red';
