--- a/_posts/2024-11-02-buySell.md
+++ b/_posts/2024-11-02-buySell.md
@@ -257,35 +257,53 @@ title: Stocks Buy/Sell
             <p id="stock-symbol">NASDAQ: N/A</p>
         </div>
         <div class="buy-sell-buttons-container">
-            <div class="buy-sell-buttons">
-                <button class="buy-button" onclick="handleBuyClick()">Buy</button>
-                <button class="sell-button" onclick="handleSellClick()">Sell</button>
-                <script>
-                    let buyCooldown = false;
-                    let sellCooldown = false;
-                    function handleBuyClick() {
-                        if (!buyCooldown) {
-                            buyStock();
-                            buyCooldown = true;
-                            setTimeout(() => {
-                                buyCooldown = false;
-                            }, 1000); // 1 second cooldown
-                        }
-                    }
-                    function handleSellClick() {
-                        if (!sellCooldown) {
-                            removeStock();
-                            sellCooldown = true;
-                            setTimeout(() => {
-                                sellCooldown = false;
-                            }, 1000); // 1 second cooldown
-                        }
-                    }
-                </script>    
-                </div>
-            <p class="buysell" id="buysell"></p>
-            <p class="userStock" id="userStock"></p>
-        </div>
+    <div class="buy-sell-buttons">
+        <button class="buy-button" onclick="handleBuyClick()">Buy</button>
+        <button class="sell-button" onclick="handleSellClick()">Sell</button>
+    </div>
+    <!-- Quantity Input Box -->
+    <input type="number" id="quantity-input" placeholder="Enter quantity" min="1" style="width: 125px; margin-top: 10px;">
+    <p class="buysell" id="buysell"></p>
+    <p class="userStock" id="userStock"></p>
+    <script>
+            let buyCooldown = false;
+            let sellCooldown = false;
+            const changeElement = document.getElementById('buysell');
+            function handleBuyClick() {
+                let quantity = document.getElementById("quantity-input").value;
+                if (!buyCooldown && quantity && !isNaN(quantity)) {
+                    buyStock();
+                    buyCooldown = true;
+                    setTimeout(() => { buyCooldown = false; }, 1000); // 1 second cooldown
+                } else {
+                    displayError("Please enter a valid quantity.");
+                    console.error("quantity");
+                    changeElement.textContent = `Please enter a value`;
+                    changeElement.classList.add("negative");
+                    changeElement.classList.remove("positive");
+                }
+            }
+            function handleSellClick() {
+                let quantity = document.getElementById("quantity-input").value;
+                if (!sellCooldown && quantity && !isNaN(quantity)) {
+                    removeStock();
+                    sellCooldown = true;
+                    setTimeout(() => { sellCooldown = false; }, 1000); // 1 second cooldown
+                } else {
+                    displayError("Please enter a valid quantity.");
+                    console.error("quantity");
+                    changeElement.textContent = `Please enter a value`;
+                    changeElement.classList.add("negative");
+                    changeElement.classList.remove("positive");
+                }
+            }
+            function displayError(message) {
+                const output = document.getElementById("output");
+                output.textContent = message;
+                setTimeout(() => { output.textContent = ""; }, 2000); // Clear after 2 seconds
+            }
+        </script>
+</div>
     </div>
         <!-- Price Info -->
         <div class="price-info">
@@ -484,6 +502,7 @@ function displayChart(labels, prices, tickerSymbol) {
 }
 async function buyStock() {
     const stockSymbol = document.getElementById("searchBar").value; // Get the stock symbol from the search bar
+    const quantity = document.getElementById("quantity-input").value; 
     const outputElement = document.getElementById("output");
     outputElement.textContent = ""; // Clear previous messages
     console.log(stockSymbol);
@@ -496,7 +515,7 @@ async function buyStock() {
             },
             body: JSON.stringify({
                 username: userID,
-                quantity: "1",
+                quantity: quantity,
                 stockSymbol: stockSymbol
             })
         });
@@ -533,6 +552,7 @@ async function buyStock() {
 }
 async function removeStock() {
     const stockSymbol = document.getElementById("searchBar").value; // Get the stock symbol from the search bar
+    const quantity = document.getElementById("quantity-input").value;
     const outputElement = document.getElementById("output");
     outputElement.textContent = ""; // Clear previous messages
     console.log(stockSymbol);
@@ -545,7 +565,7 @@ async function removeStock() {
             },
             body: JSON.stringify({
                 username: userID,
-                quantity: "1",
+                quantity: quantity,
                 stockSymbol: stockSymbol
             })
         });
