--- a/_posts/2024-11-06-signup.md
+++ b/_posts/2024-11-06-signup.md
@@ -1,13 +1,13 @@
 ---
 layout: none
-permalink: /stocks/login
-title: Login
+permalink: /stocks/signup
+title: Sign Up
 ---
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NITD FINANCE Login Page</title>
+    <title>NITD FINANCE Sign Up Page</title>
     <style>
         * {
             box-sizing: border-box;
@@ -99,7 +99,7 @@ title: Login
             font-size: 1.2rem;
             cursor: pointer;
         }
-        .login-button {
+        .signup-button {
             width: 100%;
             background-color: #3b82f6;
             color: #ffffff;
@@ -110,20 +110,13 @@ title: Login
             cursor: pointer;
             margin-top: 0.5rem;
         }
-        .create-account {
-            font-size: 0.9rem;
-            color: #3b82f6;
-            text-align: right;
-            display: block;
-            margin-top: 0.5rem;
-        }
-        .signup-link {
+        .login-link {
             margin-top: 1.5rem;
             font-size: 0.9rem;
             color: #6b7280;
             text-align: center;
         }
-        .signup-link a {
+        .login-link a {
             color: #3b82f6;
             text-decoration: none;
         }
@@ -139,66 +132,66 @@ title: Login
     <div class="container">
         <!-- Left Section -->
         <div class="left-section">
-            <h2>Market Overview</h2>
+            <h2>Join NITD Finance</h2>
             <div class="stock-graph">
+                Finance Graph
             </div>
         </div>
         <!-- Right Section -->
         <div class="right-section">
-            <h2>Welcome back to NITD Finance!</h2>
-            <p>Start managing your finances faster and better</p>
-            <form id="loginForm">
+            <h2>Create your account</h2>
+            <p>Get started with managing your finances today</p>
+            <form id="signupForm">
                 <div class="input-group">
-                    <input type="email" id="username" placeholder="Username" required>
+                    <input type="text" id="username" placeholder="Username" required>
                 </div>
                 <div class="input-group">
                     <input type="password" id="password" placeholder="Password" required>
                 </div>
-                <a href="/student_2025/stocks/signup" class="create-account">create an account</a>
-                    <button type="button" onclick="window.location.href='http:localhost:8085/student_2025/stocks/signup'" class="login-button">Login</button>
+                <div class="input-group">
+                    <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+                </div>
+                <button type="button" onclick="signUpUser()" class="signup-button">Sign Up</button>
             </form>
-            <div id="loginMessage" class="signup-link"></div>
+            <div id="signupMessage" class="login-link"></div>
+            <div class="login-link">
+                Already have an account? <a href="/student_2025/stocks/login">Login here</a>
+            </div>
             <div class="footer">© 2024 ALL RIGHTS RESERVED - NITD FINANCE</div>
         </div>
     </div>
     <script>
-    var variable = "hello world!";
-    localStorage.setItem('name', variable)
-    console.log(variable);
-    let userID = null;
-    console.log(userID);
-    async function loginUser() {
+    async function signUpUser() {
         const username = document.getElementById('username').value;
         const password = document.getElementById('password').value;
-        const loginMessage = document.getElementById('loginMessage');
+        const confirmPassword = document.getElementById('confirmPassword').value;
+        const signupMessage = document.getElementById('signupMessage');
+        if (password !== confirmPassword) {
+            signupMessage.style.color = 'red';
+            signupMessage.textContent = 'Passwords do not match';
+            return;
+        }
         try {
-            const response = await fetch('http://localhost:8085/user/login', {
+            const response = await fetch('http://localhost:8085/user/', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ username, password })
             });
-            let result;
-            if (response.headers.get('content-type')?.includes('application/json')) {
-                result = await response.json();
-            } else {
-                result = { success: response.ok, message: await response.text() };
-            }
-            // Redirect to the desired page after a successful login
+            const result = await response.json();
             if (result.success) {
-                loginMessage.style.color = 'green';
-                loginMessage.textContent = 'Login successful!';
-                userID = username;
-                console.log(userID);
-                localStorage.setItem('userID', userID)
-                window.location.href = 'http://127.0.0.1:4100/student_2025/stocks/home';
+                signupMessage.style.color = 'green';
+                signupMessage.textContent = 'Sign up successful! Redirecting to login...';
+                setTimeout(() => {
+                    window.location.href = '/stocks/student_2025/login';
+                }, 2000);
             } else {
-                loginMessage.style.color = 'red';
-                loginMessage.textContent = result.message || 'Login failed';
+                signupMessage.style.color = 'red';
+                signupMessage.textContent = result.message || 'Sign up failed';
             }
         } catch (error) {
-            loginMessage.style.color = 'red';
-            loginMessage.textContent = 'An error occurred. Please try again.';
-            console.error('Login Error:', error);
+            signupMessage.style.color = 'red';
+            signupMessage.textContent = 'An error occurred. Please try again.';
+            console.error('Sign Up Error:', error);
         }
     }
     </script>
