fixed login signup

--- a/_posts/2024-10-31-login.md
+++ b/_posts/2024-10-31-login.md
@@ -155,7 +155,7 @@ title: Login
                     <input type="password" id="password" placeholder="Password" required>
                 </div>
                 <a href="/student_2025/stocks/signup" class="create-account">create an account</a>
-                    <button type="button" onclick="window.location.href='http:localhost:8085/student_2025/stocks/signup'" class="login-button">Login</button>
+                <button type="button" onclick="loginUser()" class="login-button">Login</button>
             </form>
             <div id="loginMessage" class="signup-link"></div>
             <div class="footer">© 2024 ALL RIGHTS RESERVED - NITD FINANCE</div>
