--- a/_posts/2024-11-06-signup.md
+++ b/_posts/2024-11-06-signup.md
@@ -3,6 +3,7 @@ layout: none
 permalink: /stocks/signup
 title: Sign Up
 ---
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -44,17 +45,17 @@ title: Sign Up
             height: 100%;
         }
         .left-section {
-            background: linear-gradient(135deg, #1f2937, #3b82f6); /* Dark gradient background */
-            color: #ffffff; /* White text for contrast */
+            background: linear-gradient(135deg, #1f2937, #3b82f6);
+            color: #ffffff;
             padding: 3rem;
             text-align: center;
         }
         .left-section h2 {
-            font-size: 2.2rem; /* Larger font size for emphasis */
+            font-size: 2.2rem;
             margin-bottom: 1.5rem;
         }
         .stock-graph {
-            background: rgba(255, 255, 255, 0.2); /* Transparent white overlay */
+            background: rgba(255, 255, 255, 0.2);
             border-radius: 12px;
             width: 80%;
             height: 200px;
@@ -68,11 +69,11 @@ title: Sign Up
             padding: 1rem;
         }
         .right-section h2 {
-            font-size: 2rem; /* Increased font size */
+            font-size: 2rem;
             margin-bottom: 1rem;
         }
         .right-section p {
-            font-size: 1.1rem; /* Increased font size */
+            font-size: 1.1rem;
             color: #6b7280;
             margin-bottom: 1.5rem;
         }
@@ -88,7 +89,7 @@ title: Sign Up
             border-radius: 8px;
             font-size: 1rem;
             color: #6b7280;
-            min-width: 300px; /* Ensure a minimum width for inputs */
+            min-width: 300px;
         }
         .input-group .icon {
             position: absolute;
@@ -161,39 +162,58 @@ title: Sign Up
         </div>
     </div>
     <script>
-    async function signUpUser() {
-        const username = document.getElementById('username').value;
-        const password = document.getElementById('password').value;
-        const confirmPassword = document.getElementById('confirmPassword').value;
-        const signupMessage = document.getElementById('signupMessage');
-        if (password !== confirmPassword) {
-            signupMessage.style.color = 'red';
-            signupMessage.textContent = 'Passwords do not match';
-            return;
-        }
-        try {
-            const response = await fetch('http://localhost:8085/user/', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ username, password })
-            });
-            const result = await response.json();
-            if (result.success) {
+async function signUpUser() {
+    const username = document.getElementById('username').value;
+    const password = document.getElementById('password').value;
+    const confirmPassword = document.getElementById('confirmPassword').value;
+    const signupMessage = document.getElementById('signupMessage');
+    if (password !== confirmPassword) {
+        signupMessage.style.color = 'red';
+        signupMessage.textContent = 'Passwords do not match';
+        return;
+    }
+    try {
+        const response = await fetch('http://localhost:8085/user/register', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ username: username, password: password })
+        });
+        const contentType = response.headers.get("content-type");
+        let result;
+        if (contentType && contentType.includes("application/json")) {
+            result = await response.json();
+        } else {
+            const textResponse = await response.text();
+            if (textResponse === "User registered successfully!") {
                 signupMessage.style.color = 'green';
                 signupMessage.textContent = 'Sign up successful! Redirecting to login...';
                 setTimeout(() => {
-                    window.location.href = '/stocks/student_2025/login';
+                    window.location.href = '{{site.baseurl}}/stocks/login';
                 }, 2000);
+                return;
             } else {
-                signupMessage.style.color = 'red';
-                signupMessage.textContent = result.message || 'Sign up failed';
+                throw new Error(`Non-JSON response: ${textResponse}`);
             }
-        } catch (error) {
-            signupMessage.style.color = 'red';
-            signupMessage.textContent = 'An error occurred. Please try again.';
-            console.error('Sign Up Error:', error);
         }
+        if (result.success) {
+            signupMessage.style.color = 'green';
+            signupMessage.textContent = 'Sign up successful! Redirecting to login...';
+            setTimeout(() => {
+                window.location.href = '{{site.baseurl}}/stocks/login';
+            }, 2000);
+        } else {
+            signupMessage.style.color = 'red';
+            signupMessage.textContent = result.message || 'Sign up failed';
+        }
+    } catch (error) {
+        signupMessage.style.color = 'red';
+        signupMessage.textContent = error.message.includes('Non-JSON response') 
+            ? error.message.replace('Non-JSON response:', '').trim() 
+            : 'An error occurred. Please try again.';
+        console.error('Sign Up Error:', error);
     }
+}
     </script>
+
 </body>
 </html>
